# XCE

./: .gitignore  README.md  XCE.yml  cache_db.py  cardinality_extract.py  check_join.py  col_handler.py  docker_management.py  gen_all_reason.py  gen_trainingset_parallel.py  online_eval_training_data.txt  online_evaluation.py  plan_handler.py  reason_analyze.py  run_ASM.py  sql_executor.py  sql_parser.py  train_tree.py  training_dataset_imdb.txt
ASM/: casestudy_imdb_ar.sh  evaluate_imdb_ar.sh  generate_imdb_ar.sh  generate_imdb_model.sh  get_subquery.py  imdb_est.txt  imdb_utils.py  logical_tree.py  run_case_study.py  safe_generate_imdb_ar.sh  send_query.py
ASM/AR/: common.py  datasets.py  estimators.py  experiments.py  factorized_sampler.py  fair_sampler.py  made.py  masking.py  neurocard.py  run.py  train_utils.py  utils.py
ASM/Evaluation/: test_one.py  testing.py  training.py
ASM/Join_scheme/: bound.py  data_prepare.py
ASM/Schemas/imdb/: schema.py
Data/: job4.txt  job_test.txt
RegressionFramework/: RegressionFramework.py  StaticPlanGroup.py  test_utils.py  utils.py
RegressionFramework/NonShiftedModel/: AdaptivaGroupAction.py  AdaptivePlanGroup.py  PlansManeger.py
RegressionFramework/Plan/: PgPlan.py  Plan.py
RegressionFramework/ShiftedPlanProducer/: ShiftedManager.py  generateSql.py  statistic.py
Server/backend/: manage.py
Server/backend/demo_server/: asgi.py  settings.py  urls.py  wsgi.py
Server/backend/main/: urls.py  views.py
Server/demo/: README.md
Server/demo/decision_trees/: models.json  offline.json  online_10a.json  online_10b.json  online_10c.json  online_11a.json  online_11b.json  online_11c.json  online_11d.json  online_12a.json  online_12b.json  online_12c.json  online_13a.json  online_13b.json  (+90 more)
Server/index/: CMakeLists.txt  README.md  demo.cpp  demo.manifest.template
Server/index/include/: index.hpp
Server/index/include/btree/: CMakeLists.txt  b_tree.h  ipc.manifest.template  utility.h
Server/index/include/btree/buffer/: buffer_pool_manager.h  lru.h  ree_buffer_manager.h  ree_shm_manager.h  storage_management.h  tee_buffer_manager.h  tee_shm_manager.h
Server/index/include/btree/stx/: btree_multimap.h
Server/index/include/pgm/: defs.h  pgm_index.hpp  pgm_index_dynamic.hpp  piecewise_linear_model.hpp  storage_utility.hpp
Server/index/include/table/: table.hpp  table_meta.cpp  table_meta.hpp
Server/index/scripts/: gen_data.sh  run_benchmark.sh  run_size.sh
Server/index/tools/: table_meta.py  transform.py
Server/index/utils/: join.hpp  key_type.h  ycsb_utils.h
Web/: index.html  package-lock.json  package.json  vite.config.ts
Web/public/: job-queries.json
Web/src/: App.vue
evaluation/: docker_management.py  handle_send_log.py  plot_cumulative_time.py  plot_eval_time.py  send_online_query.py  send_online_query_get_plan.py  send_original_query.py  send_query.py  sql_executor.py
evaluation/imdb_est_files/: imdb_est_ASM.txt  imdb_est_fix_log_5_3_bound_2.txt  imdb_true_card.txt
evaluation/online_est_files/: online_eval_XCE_estimates_text.txt  online_eval_asm_estimates_test.txt
(+1739 files in other folders)
